--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,24 @@
 header {
     background-color: red;
-    padding: 20px 0;
+    padding: 10px 0;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 header h1{
     color: white;
     text-shadow: 2px 2px black;
+}
+
+a.button{
+    padding: 2px 10px;
+    border: 1px inset buttonborder;
+    border-radius: 1px;
+    color: whitesmoke;
+    background-color: red;
+    border-color: yellow;
+    text-decoration: none;
+    text-shadow: 1px 1px black;
 }
 
 #products {
